# tll-netlink

./: LICENSE  dump.py  meson.build
.github/workflows/: ci.yml
debian/: changelog  control
scheme/: meson.build  netlink.yaml  sock-diag-control.yaml  sock-diag.yaml
src/: base.h  channel.cc  control.yaml  mnlutil.h  monitor.cc  monitor.h  netlink-control.yaml  netlink.h  netlink.yaml  nl80211-channel.h  nl80211-enums.h  nl80211.attr.h  nl80211.bss.h  nl80211.cc  nl80211.h  nl80211.scmd.h  nl80211.yaml  sock-diag.cc  sock-diag.h
tests/: conftest.py  test_sock_diag.py
